# GameServer

./: CMakeLists.txt  run_test.sh
Common/Include/: Debug.hpp  InitMessageQueue.hpp
Common/Source/: Debug.cpp  InitMessageQueue.cpp
Include/: Planet.hpp  PrivatePlanetInfo.hpp  SendingFunctions.hpp  SessionIdContainer.hpp  Universe.hpp  UserContainer.hpp
Messages/: MsgServerControlReq.hpp
Messages/Include/: MsgBuildReq.hpp  MsgBuildResp.hpp  MsgGetPlanetInfoReq.hpp  MsgGetPlanetInfoResp.hpp  MsgGetPlanetListReq.hpp  MsgGetPlanetListResp.hpp  MsgLogingReq.hpp  MsgLogingResp.hpp  MsgServerControlReq.hpp  MsgServerStatusReq.hpp  MsgServerStatusResp.hpp  MsgStarSystemInfoReq.hpp  MsgStarSystemInfoResp.hpp  MsgUserRegisterReq.hpp  MsgUserRegisterResp.hpp  PlanetCoordinates.hpp  Resources.hpp  ServerInMessage.hpp  ServerOutMessage.hpp
Messages/Source/: PlanetCoordinates.cpp  Resources.cpp
Script/: run_regression.sh  run_test.sh
Source/: Planet.cpp  PrivatePlanetInfo.cpp  SendingFunctions.cpp  SessionIdContainer.cpp  Universe.cpp  UserContainer.cpp  main.cpp
Test/: test.cpp
Test/Include/: GameServerTestSuiteBase.hpp  getServerStatus.hpp  sendMessage.hpp  tryToGetPlanetInfo.hpp  tryToGetPlanetList.hpp  tryToGetPublicPlanetInfo.hpp  tryToLoginUser.hpp  tryToRegisterUser.hpp
Test/Source/: AssignMotherPlanet.cpp  GtestMain.cpp  LogingUser2.cpp  ServerStartAndPauze.cpp  TimeElapsed.cpp  getServerStatus.cpp  logingUser.cpp  logingUser3.cpp  planetsInfo.cpp  planetsInfo_2.cpp  planetsInfo_3.cpp  planetsInfo_4planetSize.cpp  publicPlanetInfo.cpp  sendMessage.cpp  tryToGetPlanetInfo.cpp  tryToGetPlanetList.cpp  tryToGetPublicPlanetInfo.cpp  tryToLoginUser.cpp  tryToRegisterUser.cpp  userRegister.cpp  userRegister2.cpp
